[tool.poetry]
name = "vyper-example"
version = "0.1.0"
description = "Vyper by example package."
authors = ["Shawn Anderson <shawn@longtailfinancial.com>"]
readme = "README.md"
packages = [{include = "vyper_example"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
eth-ape = "^0.6.6"
vyper = "^0.3.7"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
